--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="band indie" style="grid-row-start: 2;">Solista acústico y triste</div>
                 <div class="band indie" style="grid-row-start: 4;">Alberto Fernández</div>
                 <div class="band indie" style="grid-row-start: 7;">Fuerza lucio</div>
-                <div class="band indie" style="grid-row-start: 8;">La Pepona</div>
+                <div class="band indie" style="grid-row-start: 8;">Andrew</div>
             </div>
         </div>
     </main>
